--- a/app/src/main/res/layout/fragment_room.xml
+++ b/app/src/main/res/layout/fragment_room.xml
@@ -145,6 +145,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:gravity="center"
+                            android:fontFamily="@font/nunito_semibold"
                             android:layout_marginTop="5dp"
                             android:layout_marginStart="3dp"
                             android:layout_marginEnd="3dp"
@@ -184,6 +185,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:gravity="center"
+                            android:fontFamily="@font/nunito_semibold"
                             android:layout_marginTop="5dp"
                             android:layout_marginStart="3dp"
                             android:layout_marginEnd="3dp"
@@ -224,6 +226,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:gravity="center"
+                            android:fontFamily="@font/nunito_semibold"
                             android:layout_marginTop="5dp"
                             android:layout_marginStart="3dp"
                             android:layout_marginEnd="3dp"
